# invenio-pidstore

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  requirements.txt  usage.rst
examples/: app-fixtures.sh  app-recreate.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
invenio_pidstore/: __init__.py  admin.py  cli.py  config.py  errors.py  ext.py  fetchers.py  minters.py  models.py  provider.py  proxies.py  registry.py  resolver.py  version.py  views.py
invenio_pidstore/alembic/: 734dbec0f3f8_change_datetime_types.py  999c62899c20_create_pidstore_tables.py  f615cee99600_create_pidstore_branch.py
invenio_pidstore/providers/: __init__.py  base.py  datacite.py  local_doi.py  recordid.py  recordid_v2.py
invenio_pidstore/translations/: invenio.pot  messages.pot
invenio_pidstore/translations/af/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ar/LC_MESSAGES/: messages.po
invenio_pidstore/translations/bg/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ca/LC_MESSAGES/: messages.po
invenio_pidstore/translations/cs/LC_MESSAGES/: messages.po
invenio_pidstore/translations/da/LC_MESSAGES/: messages.po
invenio_pidstore/translations/de/LC_MESSAGES/: messages.po
invenio_pidstore/translations/de_AT/LC_MESSAGES/: messages.po
invenio_pidstore/translations/de_DE/LC_MESSAGES/: messages.po
invenio_pidstore/translations/el/LC_MESSAGES/: messages.po
invenio_pidstore/translations/en_AT/LC_MESSAGES/: messages.po
invenio_pidstore/translations/en_HU/LC_MESSAGES/: messages.po
invenio_pidstore/translations/es/LC_MESSAGES/: messages.po
invenio_pidstore/translations/es_CU/LC_MESSAGES/: messages.po
invenio_pidstore/translations/es_MX/LC_MESSAGES/: messages.po
invenio_pidstore/translations/et/LC_MESSAGES/: messages.po
invenio_pidstore/translations/et_EE/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fa/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fi/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fr/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_pidstore/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_pidstore/translations/gl/LC_MESSAGES/: messages.po
invenio_pidstore/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_pidstore/translations/hr/LC_MESSAGES/: messages.po
invenio_pidstore/translations/hu/LC_MESSAGES/: messages.po
invenio_pidstore/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_pidstore/translations/it/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ja/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ka/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ko/LC_MESSAGES/: messages.po
invenio_pidstore/translations/lt/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ne/LC_MESSAGES/: messages.po
invenio_pidstore/translations/no/LC_MESSAGES/: messages.po
invenio_pidstore/translations/pl/LC_MESSAGES/: messages.po
invenio_pidstore/translations/pt/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ro/LC_MESSAGES/: messages.po
invenio_pidstore/translations/ru/LC_MESSAGES/: messages.po
invenio_pidstore/translations/rw/LC_MESSAGES/: messages.po
invenio_pidstore/translations/sk/LC_MESSAGES/: messages.po
invenio_pidstore/translations/sv/LC_MESSAGES/: messages.po
invenio_pidstore/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_pidstore/translations/tr/LC_MESSAGES/: messages.po
invenio_pidstore/translations/uk/LC_MESSAGES/: messages.po
invenio_pidstore/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_pidstore/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_pidstore/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_pidstore/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_pidstore/upgrades/: __init__.py  pidstore_2014_08_22_initial.py  pidstore_2015_10_26_timestamp.py
tests/: __init__.py  conftest.py  test_admin.py  test_cli.py  test_examples_app.py  test_ext.py  test_fetchers.py  test_invenio_pidstore.py  test_minters.py  test_provider.py  test_providers.py  test_recordidentifier.py  test_resolver.py
tests/mock_providers/: __init__.py  mock_datacite.py
