# SPDX-FileCopyrightText: 2015-2019 CERN.
# SPDX-FileCopyrightText: 2019 Northwestern University.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2022 RERO.
# SPDX-FileCopyrightText: 2024 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-pidstore"
description = "Invenio module that stores and registers persistent identifiers."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "DOI",
  "identifier",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "base32-lib>=1.0.1",
  "importlib_metadata>=4.4",
  "importlib_resources>=5.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-pidstore"

[project.entry-points."invenio_admin.views"]
invenio_pidstore_pid = "invenio_pidstore.admin:pid_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_pidstore = "invenio_pidstore:InvenioPIDStore"

[project.entry-points."invenio_base.apps"]
invenio_pidstore = "invenio_pidstore:InvenioPIDStore"

[project.entry-points."invenio_db.alembic"]
invenio_pidstore = "invenio_pidstore:alembic"

[project.entry-points."invenio_db.models"]
invenio_pidstore = "invenio_pidstore.models"

[project.entry-points."invenio_i18n.translations"]
invenio_pidstore = "invenio_pidstore"

[project.entry-points."invenio_pidstore.fetchers"]
recid = "invenio_pidstore.fetchers:recid_fetcher"
recid_v2 = "invenio_pidstore.fetchers:recid_fetcher_v2"

[project.entry-points."invenio_pidstore.minters"]
recid = "invenio_pidstore.minters:recid_minter"
recid_v2 = "invenio_pidstore.minters:recid_minter_v2"

[project.optional-dependencies]
tests = [
  "datacite>=0.1.0",
  "flask-menu>=2.0.0,<3.0.0",
  "invenio-access>=7.0.0,<8.0.0",
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-admin>=1.2.0,<2.0.0",
  "invenio-db[mysql,postgresql,versioning]>=2.2.0,<3.0.0",
  "mock>=3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
  "sqlalchemy-continuum>=1.3.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_pidstore/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_pidstore/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_pidstore/translations/messages.pot"
output_dir = "invenio_pidstore/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_pidstore/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_pidstore",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_pidstore --cov-report=term-missing'
testpaths = "tests invenio_pidstore"
live_server_scope = "module"
