# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-pidstore
version = attr: invenio_pidstore.__version__
description = "Invenio module that stores and registers persistent identifiers."
long_description = file: README.rst, CHANGES.rst
keywords = invenio identifier DOI
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-pidstore
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    base32-lib>=1.0.1
    importlib_metadata>=4.4
    importlib_resources>=5.0
    invenio-base>=1.2.5
    invenio-i18n>=1.2.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    Flask-Menu>=0.5.1
    invenio-admin>=1.2.0
    invenio-access>=1.0.0
    invenio-accounts>=1.4.0
    mock>=3.0.0
    pytest-invenio>=1.4.0
    SQLAlchemy-Continuum>=1.3.11
    invenio-admin>=1.2.0
    datacite>=0.1.0
    Sphinx>=4.5.0
    invenio-db[mysql,postgresql,versioning]>=1.0.9,<2.0.0

[options.entry_points]
invenio_db.alembic =
    invenio_pidstore = invenio_pidstore:alembic
invenio_db.models =
    invenio_pidstore = invenio_pidstore.models
invenio_base.apps =
    invenio_pidstore = invenio_pidstore:InvenioPIDStore
invenio_base.api_apps =
    invenio_pidstore = invenio_pidstore:InvenioPIDStore
invenio_pidstore.minters =
    recid = invenio_pidstore.minters:recid_minter
    recid_v2 = invenio_pidstore.minters:recid_minter_v2
invenio_pidstore.fetchers =
    recid = invenio_pidstore.fetchers:recid_fetcher
    recid_v2 = invenio_pidstore.fetchers:recid_fetcher_v2
invenio_admin.views =
    invenio_pidstore_pid = invenio_pidstore.admin:pid_adminview

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_pidstore/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_pidstore/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_pidstore/translations/messages.pot
output-dir = invenio_pidstore/translations/

[update_catalog]
input-file = invenio_pidstore/translations/messages.pot
output-dir = invenio_pidstore/translations/

[isort]
profile=black

[tool:pytest]
doctest_optionflags = DONT_ACCEPT_TRUE_FOR_1 ELLIPSIS IGNORE_EXCEPTION_DETAIL
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_pidstore --cov-report=term-missing
testpaths = docs tests invenio_pidstore
